--- a/source/css/partials/navigation.sass
+++ b/source/css/partials/navigation.sass
@@ -156,8 +156,18 @@ a.logo, a.logo:visited
 .nav-hidden
   max-height: 0px
   +opacity(0)
+  @media only screen and (min-width: $second-break)
+    max-height: auto
+    +opacity(1)
+
+.no-js
+  .nav-hidden
+    max-height: 1000px
+    +opacity(1)
+
 
 .nav-visible
   max-height: 1000px
   +opacity(1)
   
+
